Initial Listview and Fragment

--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -15,7 +15,8 @@
         android:id="@+id/weather"
         android:layout_toRightOf="@id/date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp" />
 
     <ImageView
         android:background="@mipmap/ic_launcher"
