--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,9 +11,10 @@
     tools:context="top.moverco.sunshine.MainActivity">
 
 <fragment
-    android:id="@+id/list_item"
+    android:id="@+id/list_fragment"
     android:name="top.moverco.sunshine.ListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:layout="@layout/listfragment"></fragment>
-</RelativeLayout>
+
+</FrameLayout>
