--- a/app/src/main/res/layout/listfragment.xml
+++ b/app/src/main/res/layout/listfragment.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     >
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         >
     
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </FrameLayout>
